# tenorbot

./: .gitignore  Dockerfile  README.md  bot.py  compose.yaml  pyproject.toml  settings.py
